fixed background, added navigation, fixing spacing for last 2 slides

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,92 @@ body {
   overflow-x: hidden;
   font-family: Nunito;
 }
+
+a {
+text-decoration: none;
+}
+
+.et-hero-tabs,
+.et-slide {
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+height: 100vh;
+position: relative;
+background: #eee;
+	text-align: center;
+	padding: 0 2em;
+h1 {
+	font-size: 2rem;
+	margin: 0;
+	letter-spacing: 1rem;
+}
+h3 {
+	font-size: 1rem;
+	letter-spacing: 0.3rem;
+	opacity: 0.6;
+}
+}
+
+.et-hero-tabs-container {
+align-self: center;
+display: flex;
+flex-direction: row;
+position: absolute;
+bottom: 0;
+width: 95.5%;
+height: 70px;
+box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+background: #fff;
+z-index: 10;
+&--top {
+	position: fixed;
+	top: 0;
+}
+}
+
+.et-hero-tab {
+display: flex;
+justify-content: center;
+align-items: center;
+flex: 1;
+color: #000;
+letter-spacing: 0.1rem;
+	transition: all 0.5s ease;
+	font-size: 0.8rem;
+  &:hover {
+		color:white;
+  background: rgba(102,177,241,0.8);
+		transition: all 0.5s ease;
+}
+}
+
+.et-hero-tab-slider {
+position: absolute;
+bottom: 0;
+width: 0;
+height: 6px;
+background: #66B1F1;
+transition: left 0.3s ease;
+}
+
+@media (min-width: 800px) {
+.et-hero-tabs,
+.et-slide {
+h1 {
+	font-size: 3rem;
+}
+h3 {
+	font-size: 1rem;
+}
+}
+.et-hero-tab {
+	font-size: 1rem;
+}
+}
+
+
   
 #carousel {
 	perspective: 1000px;
@@ -44,7 +130,6 @@ body {
 	width: 45px;
 	height: 45px;
 	line-height: 40px;
-	padding-left: 7px;
 	box-sizing: border-box;
 	border-radius: 50%;
 	float: left;
@@ -64,17 +149,8 @@ body {
 }
 
 
-  
-
-
-
 * {
 	box-sizing: border-box;
-}
-
-h1 {
-	margin: 10;
-	font-size: 5.8rem;
 }
 
 figure {
@@ -91,7 +167,6 @@ figure {
 		[header-start]
 		auto
 		[fig1-start]
-		3rem
 		[header-end]
 		minmax(var(--verticalPadding), auto)
 		[fig2-start]
@@ -108,6 +183,7 @@ figure {
 	gap: 1rem;
 	max-width: 70rem;
 	margin: auto;
+	margin-right: 200px;
 	align-items: center;
 	
 	&::before,
@@ -183,17 +259,21 @@ p {
 }
 
 .slide {
-  min-height: 10vh;
   width: 100vw;
   box-sizing: border-box;
-	transform-style: inherit;
+  transform-style: inherit;
 }
 
 .header{
 	display: block;
+	width: 100%;
+}
+
+.poster{
+	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	width: 100%;
+	height: 20%;
 }
 
 figure img {
@@ -206,26 +286,24 @@ figure img {
   background: rgba(240,230,220, .7);
 } 
 
-#title {
-  background-image: url("assets/agu.jpg");
-  z-index:2;
-}
-
 #slide1 {
-	background-image: url("assets/background.jpg");
-	transform: translateZ(-1px) scale(1);
+	align-self: center;
+	background-color: rgb(83, 131, 189);
+	/* background-size: contain;
+	background-repeat: no-repeat;  */
+	width: 100%;
 }
 
 #slide2 {
-	background-image: url("assets/blue.jpg");
+	background-color: rgb(83, 131, 189);
 	z-index:2;
 }
 
 #slide3{
-	background-image: url("assets/background.jpg");
+	height: 950px;
 	transform: translateZ(-1px) scale(1);
 }
-/* 
+
 #slide4 {
-  background: #222;
-}  */
+	margin-top: 90rem;
+} 
